[gd_scene format=3 uid="uid://byxl07l20p8jc"]

[ext_resource type="Script" uid="uid://puqkkxqvm00e" path="res://main_menu.gd" id="1_06t4h"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -100.0
offset_right = 120.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Party Game 9000"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Your Name"
alignment = 1

[node name="CreateGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Create Game"

[node name="Separator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="LobbyCodeInput" type="LineEdit" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Lobby Code (e.g. ABCD)"
alignment = 1
max_length = 4
capitalize = 2

[node name="JoinGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartGame" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[connection signal="pressed" from="VBoxContainer/CreateGame" to="." method="_on_create_game_pressed"]
[connection signal="pressed" from="VBoxContainer/JoinGame" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
